; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl819xusb_rx_command_packet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl819xusb_rx_command_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ieee80211_rx_stats = type { i32 }

@.str = private unnamed_addr constant [54 x i8] c"rxcommandpackethandle819xusb: It is a command packet\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rtl819xusb_rx_command_packet(%struct.net_device* %0, %struct.ieee80211_rx_stats* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ieee80211_rx_stats*, align 8
  %5 = alloca i64, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ieee80211_rx_stats* %1, %struct.ieee80211_rx_stats** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = load %struct.ieee80211_rx_stats*, %struct.ieee80211_rx_stats** %4, align 8
  %8 = call i64 @cmpk_message_handle_rx(%struct.net_device* %6, %struct.ieee80211_rx_stats* %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 @DMESG(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  br label %14

13:                                               ; preds = %2
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i64, i64* %5, align 8
  ret i64 %15
}

declare dso_local i64 @cmpk_message_handle_rx(%struct.net_device*, %struct.ieee80211_rx_stats*) #1

declare dso_local i32 @DMESG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
